# Mandelbrot

./: .gitignore  CMakeLists.txt  Mandelbrot  Mandelbrot.pro  generate.cpp  generate.hpp  main.cpp  mainwindow.ui  mandel.cpp  startdialog.ui
Qt/: Qt.pro  bitmap_image.h  main.cpp  mandel.cpp
cheval/: generate.cpp  mandel  mandel.cpp
